fixes made after validator checks

--- a/crates.html
+++ b/crates.html
@@ -161,7 +161,7 @@
                         <div class="form-group add-info">
                             <label class="headings-dark" for="exampleFormControlTextarea1">Additional Information</label>
                             <textarea class="form-control content-text-dark" id="exampleFormControlTextarea1" rows="3"></textarea>
-                            <button class="btn btn-md delivery-button headings-light" role="button">Delivery & Payment Details</button>
+                            <button class="btn btn-md delivery-button headings-light" >Delivery & Payment Details</button>
                         </div>
                     </div>
                 </div>
