--- a/index.html
+++ b/index.html
@@ -106,12 +106,12 @@
                 <div class="col-12">      
                     <div class="jumbotron text-center">
                         <h2 class="headings-light">New Year, New Beer!</h2>
-                        <h1 class="display-4 headings-light">Scottish Craft Beer To Your Door!</h1>
+                        <h2 class="display-4 headings-light">Scottish Craft Beer To Your Door!</h2>
                         <p class="lead d-none d-md-block content-text-light">Grab a mixed crate of some of Scotlands best artisan and craft beers.</p>
                         <hr class="block-divider-light">
                         <p class="content-text-light">Sign up today and you'll receive up to 12 beers every month!</p>
                         <p class="content-text-light">From just £12.99<strong> First Month is on us!</strong></p>
-                        <button class="btn btn-md sign-up-button headings-light" data-toggle="modal" data-target="#signUpModal" role="button">Sign Up</button>
+                        <button class="btn btn-md sign-up-button headings-light" data-toggle="modal" data-target="#signUpModal">Sign Up</button>
                         <p class="content-text-light"><small>Subscibers must be at least 18 years of age. Keep calm and drink responsibly</small></p>
                     </div>  
                 </div>
