--- a/contact-us.html
+++ b/contact-us.html
@@ -101,7 +101,7 @@
             <div class="opaque-overlay">&nbsp;</div>
             <div class="row">
                 <div class="col-12">
-                    <h1 class="image-headings headings-light">Contact Us</h1>
+                    <h2 class="image-headings headings-light">Contact Us</h2>
                 </div>
             </div>
         </div>
@@ -186,7 +186,12 @@
     <section class="content-background find-us">
         <div class="container-fluid">
             <h2 class="headings-dark headings text-center">Find Us</h2>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2238.4244997846085!2d-4.314658884629436!3d55.87265074021037!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x488845c2a0cdaa37%3A0x9e26eab99eb389c8!2sWest%20End%20Retail%20Park%2C%20Crow%20Rd%2C%20Glasgow%20G11%207RY!5e0!3m2!1sen!2suk!4v1610184066074!5m2!1sen!2suk" width="100%" height="300" id="iframe-map">
+            <p class="content-text-dark text-center address">Unit 12</p>
+            <p class="content-text-dark text-center address">West End Retail Park</p>
+            <p class="content-text-dark text-center address">Crow Road</p>
+            <p class="content-text-dark text-center address">Glasgow</p>
+            <p class="content-text-dark text-center address">G11 7RY</p>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2238.4244997846085!2d-4.314658884629436!3d55.87265074021037!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x488845c2a0cdaa37%3A0x9e26eab99eb389c8!2sWest%20End%20Retail%20Park%2C%20Crow%20Rd%2C%20Glasgow%20G11%207RY!5e0!3m2!1sen!2suk!4v1610184066074!5m2!1sen!2suk" id="iframe-map">
                 <p>Your browser does not support iframes</p>
             </iframe>
         </div>
