--- a/contact-us.html
+++ b/contact-us.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A beer subscription service, to deliver Scottish beers to people's doorstep.">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
     <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
@@ -54,7 +55,7 @@
 
                 <!-- Sign In/Sign Up Logo Row -->
                 <div class="col-12 col-sm-12 col-md-4 d-none d-md-block text-right">
-                    <a data-toggle="modal" data-target="#signUpModal">
+                    <a class="no-underline" data-toggle="modal" href="#signUpModal">
                         <h4 class="headings-logo headings-light">Sign In/Sign Up</h4>
                     </a>
                 </div> 
@@ -171,7 +172,7 @@
                                 <div class="form-group">
                                     <label class="headings-dark" for="enquiryDetails">Enquiry Details</label>
                                     <textarea class="form-control content-text-dark" id="enquiryDetails" rows="3"></textarea>
-                                    <button class="btn btn-md delivery-button headings-light" role="button">Submit</button>
+                                    <button class="btn btn-md delivery-button headings-light">Submit</button>
                                 </div>
                             </div>
                         </div>
@@ -192,7 +193,6 @@
             <p class="content-text-dark text-center address">Glasgow</p>
             <p class="content-text-dark text-center address">G11 7RY</p>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2238.4244997846085!2d-4.314658884629436!3d55.87265074021037!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x488845c2a0cdaa37%3A0x9e26eab99eb389c8!2sWest%20End%20Retail%20Park%2C%20Crow%20Rd%2C%20Glasgow%20G11%207RY!5e0!3m2!1sen!2suk!4v1610184066074!5m2!1sen!2suk" id="iframe-map">
-                <p>Your browser does not support iframes</p>
             </iframe>
         </div>
     </section>
@@ -236,7 +236,7 @@
             </div>
             <div class="col-12 col-sm-6 col-md-4 footer-menu">
                 <h4 class="footer-headings headings-light">Sign In/Sign Up</h4>
-                    <a data-toggle="modal" data-target="#signUpModal">
+                    <a data-toggle="modal" href="#signUpModal">
                         <i class="fas fa-beer" id="beer-sign" aria-hidden="true"></i>
                         <span class="sr-only">Beer Sign Up</span>
                     </a>
