--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A beer subscription service, to deliver Scottish beers to people's doorstep.">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
     <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
@@ -55,7 +56,7 @@
 
                 <!-- Sign In/Sign Up Logo Row -->
                 <div class="col-12 col-sm-12 col-md-4 d-none d-md-block text-right">
-                    <a data-toggle="modal" data-target="#signUpModal">
+                    <a class="no-underline" data-toggle="modal" href="#signUpModal">
                         <h4 class="headings-logo headings-light">Sign In/Sign Up</h4>
                     </a>
                 </div> 
@@ -63,7 +64,7 @@
         </div>
     </header>
 
-    <!-- Navbar -->   
+    <!-- Navbar --> 
     <nav class="navbar navbar-expand-lg navbar-dark justify-content-center navbar-custom sticky-top">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -204,7 +205,7 @@
                         <div class="card-body">
                             <h5 class="headings-light">Beers</h5>
                             <p class="content-text-light">Explore our range of beers</p>
-                            <a href="beers.html" class="btn btn-sm card-button headings-dark">Click here</a>
+                            <a href="beers.html" class="btn btn-sm card-button headings-dark">View Beers</a>
                         </div>
                     </div>
                 </div>
@@ -214,7 +215,7 @@
                         <div class="card-body">
                             <h5 class="headings-light">Breweries</h5>
                             <p class="content-text-light">Find out about the Breweries</p>
-                            <a href="breweries.html" class="btn btn-sm card-button headings-dark">Click here</a>
+                            <a href="breweries.html" class="btn btn-sm card-button headings-dark">View Breweries</a>
                         </div>
                     </div>
                 </div>
@@ -224,7 +225,7 @@
                         <div class="card-body">
                             <h5 class="headings-light">Customize Your Crate</h5>
                             <p class="content-text-light">Select your preferences</p>
-                            <a href="crates.html" class="btn btn-sm card-button headings-dark">Click here</a>
+                            <a href="crates.html" class="btn btn-sm card-button headings-dark">View Crates</a>
                         </div>
                     </div>
                 </div>
@@ -271,7 +272,7 @@
             </div>
             <div class="col-12 col-sm-6 col-md-4 footer-menu">
                 <h4 class="footer-headings headings-light">Sign In/Sign Up</h4>
-                    <a data-toggle="modal" data-target="#signUpModal">
+                    <a data-toggle="modal" href="#signUpModal">
                         <i class="fas fa-beer" id="beer-sign" aria-hidden="true"></i>
                         <span class="sr-only">Beer Sign Up</span>
                     </a>
