code acknowledgements added to CSS and required added to contact us / modal forms

--- a/contact-us.html
+++ b/contact-us.html
@@ -155,10 +155,10 @@
                     <form>
                         <div class="row">
                             <div class="col">                  
-                            <input type="text" class="form-control content-text-dark" placeholder="First name">
+                            <input type="text" class="form-control content-text-dark" placeholder="First name" required>
                             </div>
                             <div class="col">
-                            <input type="text" class="form-control content-text-dark" placeholder="Last name">
+                            <input type="text" class="form-control content-text-dark" placeholder="Last name" required>
                             </div>
                         </div>
                         <br>
@@ -166,12 +166,12 @@
                             <div class="col">
                                 <div class="form-group">
                                     <label class="headings-dark" for="contactEmail">Email address</label>
-                                    <input type="email" class="form-control content-text-dark" id="contactEmail" aria-describedby="emailHelpContact" placeholder="Enter email">
+                                    <input type="email" class="form-control content-text-dark" id="contactEmail" aria-describedby="emailHelpContact" placeholder="Enter email" required>
                                     <small id="emailHelpContact" class="content-text-dark text-muted">We'll never share your email with anyone else.</small>
                                 </div>
                                 <div class="form-group">
                                     <label class="headings-dark" for="enquiryDetails">Enquiry Details</label>
-                                    <textarea class="form-control content-text-dark" id="enquiryDetails" rows="3"></textarea>
+                                    <textarea class="form-control content-text-dark" id="enquiryDetails" rows="3" required></textarea>
                                     <button class="btn btn-md delivery-button headings-light">Submit</button>
                                 </div>
                             </div>
@@ -243,6 +243,7 @@
             </div>
         </div>
     </footer>
+
     <!-- Modal from Bootstrap -->
     <div class="modal fade" id="signUpModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
@@ -257,16 +258,16 @@
                     <form>
                         <div class="form-group">
                             <label class="headings-dark" for="email">Email address</label>
-                            <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
+                            <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email" required>
                             <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                         </div>
                         <div class="form-group">
                             <label class="headings-dark" for="password">Password</label>
-                            <input type="password" class="form-control" id="password" placeholder="Password">
+                            <input type="password" class="form-control" id="password" placeholder="Password" required>
                         </div>
                         <div class="form-group">
                             <label class="headings-dark" for="repeat-password">Repeat Password</label>
-                            <input type="password" class="form-control" id="repeat-password" placeholder="Repeat Password">
+                            <input type="password" class="form-control" id="repeat-password" placeholder="Repeat Password" required>
                         </div>
                         <div class="form-group form-check">
                             <input type="checkbox" class="form-check-input" id="remember-me">
@@ -278,7 +279,6 @@
             </div>
         </div>
     </div>
-
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
