--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             </div>
         </div>
     </section>
-
+    <!-- Customer Reviews -->
     <section class="content-background">
         <div class="container-fluid">
             <div class="row">
@@ -160,7 +160,7 @@
             </div>
         </div>
     </section>
-
+    <!-- How it Works -->
     <section class="content-background-gradient">
         <div class="container-fluid">
             <div class="row">
@@ -280,7 +280,7 @@
         </div>
     </footer>
 
-    <!-- Modal from Bootstrap -->
+    <!-- Sign Up Modal from Bootstrap -->
     <div class="modal fade" id="signUpModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -294,16 +294,16 @@
                     <form>
                         <div class="form-group">
                             <label class="headings-dark" for="email">Email address</label>
-                            <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
+                            <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email" required>
                             <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                         </div>
                         <div class="form-group">
                             <label class="headings-dark" for="password">Password</label>
-                            <input type="password" class="form-control" id="password" placeholder="Password">
+                            <input type="password" class="form-control" id="password" placeholder="Password" required>
                         </div>
                         <div class="form-group">
                             <label class="headings-dark" for="repeat-password">Repeat Password</label>
-                            <input type="password" class="form-control" id="repeat-password" placeholder="Repeat Password">
+                            <input type="password" class="form-control" id="repeat-password" placeholder="Repeat Password" required>
                         </div>
                         <div class="form-group form-check">
                             <input type="checkbox" class="form-check-input" id="remember-me">
