W3C validator results added to README.md

--- a/beers.html
+++ b/beers.html
@@ -87,7 +87,7 @@
                     <a class="nav-link" href="breweries.html">Breweries</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="crates.html">Customize Your Crate</a>
+                    <a class="nav-link" href="crates.html">Customise Your Crate</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contact-us.html">Contact Us</a>
@@ -109,7 +109,7 @@
     </section>
 
     <!-- Lagers & PIlsners -->
-    <!-- beer image overlap taken from w3schools.com-->
+    <!-- beer image overlay taken from w3schools.com-->
     <section class="content-background" id="lagers-pilsners">
         <div class="container-fluid">
             <div class="row">
@@ -306,7 +306,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-2 beer-image-container">
-                    <img src="https://www.eebriatrade.com/media/products/14575/20181210130126953/450x450.jpg" alt="Munich Red Beer" class="beer-image">
+                    <img src="https://www.eebriatrade.com/media/products/14575/20181210130126953/450x450.jpg" alt="GPA beer" class="beer-image">
                     <div class="overlay">
                         <h5 class="headings-light">GPA</h5>
                         <p class="content-text-light"><small>A little wheat helps keep GPA light and fresh. We use both German hops, that lend a herbal character, and American hops bring flavours of dried lemon and black pepper.</small></p>
