--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     <a class="nav-link" href="breweries.html">Breweries</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="crates.html">Customize Your Crate</a>
+                    <a class="nav-link" href="crates.html">Customise Your Crate</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contact-us.html">Contact Us</a>
@@ -100,7 +100,7 @@
 
     <section> 
         <!-- Jumbotron -->
-        <!--"Jumbotron credited to Matt Rudge from Whisky Drop Landing page"-->
+        <!--"Jumbotron credited to Matt Rudge from Code Institute"-->
         <div class="container-fluid hero-image"> 
             <div class="opaque-overlay">&nbsp;</div>
             <div class="row">
@@ -131,7 +131,7 @@
             <div class="row no-gutters justify-content-center text-center">
                 <div class="col-12 col-sm-12 col-md-6 customer-image-container">
                     <div class="media">
-                        <img src="https://images.unsplash.com/photo-1527980965255-d3b416303d12?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80" class="align-self-center mr-3 customer-image d-none d-sm-block" alt="Customer Image">
+                        <img src="https://images.unsplash.com/photo-1527980965255-d3b416303d12?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80" class="align-self-center mr-3 customer-image d-none d-sm-block" alt="Male Customer Image">
                         <div class="media-body">
                             <h5 class="headings-dark headings">Martin J</h5>
                             <p class="content-text-dark">"I love Tartan Taps. The beers are always delivered on the date of my choosing, and there is always a good variety. When I have changed the crate sizes, or delivery date, this was easily done on the website, and was completely hassle free."</p>
@@ -145,7 +145,7 @@
                 </div>
                 <div class="col-12 col-sm-12 col-md-6 customer-image-container">
                     <div class="media">
-                        <img src="https://images.unsplash.com/photo-1508214751196-bcfd4ca60f91?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" class="align-self-center mr-3 customer-image d-none d-sm-block" alt="Customer Image">
+                        <img src="https://images.unsplash.com/photo-1508214751196-bcfd4ca60f91?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" class="align-self-center mr-3 customer-image d-none d-sm-block" alt="Female Customer Image">
                         <div class="media-body">
                             <h5 class="headings-dark headings">Susan T</h5>
                             <p class="content-text-dark">"I'd highly recommend Tartan Taps to anyone. Signed up 6 months ago as a present to my husband and he couldn't be happier. The only thing he complains about is when I pinch a beer for myself. They are very helpful, friendly and efficient."</p>
@@ -171,17 +171,17 @@
             </div>
             <div class="row no-gutters justify-content-center text-center">
                 <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 how-it-works-container">
-                    <img src="https://images.unsplash.com/photo-1423666639041-f56000c27a9a?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=753&q=80" alt="Dark Ness Stout" class="how-it-works-image">
+                    <img src="https://images.unsplash.com/photo-1423666639041-f56000c27a9a?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=753&q=80" alt="Media Devices" class="how-it-works-image">
                     <h3 class="headings-dark headings">You Order</h3>
                     <p class="content-text-dark">Simply sign up & choose type of beers, frequency, and the date you'd like them delivered. </p>            
                 </div>
                 <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 how-it-works-container">
-                    <img src="https://static.independent.co.uk/s3fs-public/thumbnails/image/2020/08/25/11/online-beer-delivery.jpg" alt="Dark Ness Stout" class="how-it-works-image">
+                    <img src="https://static.independent.co.uk/s3fs-public/thumbnails/image/2020/08/25/11/online-beer-delivery.jpg" alt="Box of beers" class="how-it-works-image">
                     <h3 class="headings-dark headings">We Deliver</h3>
                     <p class="content-text-dark">We will deliver beers right to your doorstep on your chosen date every month.</p>
                 </div>
                 <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 how-it-works-container">
-                    <img src="https://images.unsplash.com/photo-1436076863939-06870fe779c2?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" alt="Dark Ness Stout" class="how-it-works-image">
+                    <img src="https://images.unsplash.com/photo-1436076863939-06870fe779c2?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" alt="Beer glasses cheers" class="how-it-works-image">
                     <h3 class="headings-dark headings">You Enjoy</h3>
                     <p class="content-text-dark">Enjoy some of the latest and greatest beers Scotland has to offer. </p>
                 </div>           
@@ -221,7 +221,7 @@
                 </div>
                 <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-4 features">
                     <div class="card mx-auto text-center" style="width: 18rem;">
-                        <img src="https://images.unsplash.com/photo-1577670772839-befb49f0bee5?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=751&q=80" class="card-img-top" alt="...">
+                        <img src="https://images.unsplash.com/photo-1577670772839-befb49f0bee5?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=751&q=80" class="card-img-top" alt="stacked crates">
                         <div class="card-body">
                             <h5 class="headings-light">Customize Your Crate</h5>
                             <p class="content-text-light">Select your preferences</p>
