--- a/breweries.html
+++ b/breweries.html
@@ -87,7 +87,7 @@
                     <a class="nav-link active" href="breweries.html">Breweries</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="crates.html">Customize Your Crate</a>
+                    <a class="nav-link" href="crates.html">Customise Your Crate</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contact-us.html">Contact Us</a>
