testing criteria added to README.md & color fixed for FAQ's on contact-us.html

--- a/contact-us.html
+++ b/contact-us.html
@@ -113,37 +113,37 @@
             <div class="row">
 
                 <!-- FAQ's -->
-                <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+                <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 content-text-dark">
                     <h2 class="faq-headings headings-dark text-center">FAQ's</h2>
-                    <p class="context-text-dark text-center"><small>Click on questions to see the answers.</small></p>
+                    <p class="text-center"><small>Click on questions to see the answers.</small></p>
                     <br>
-                    <details class="context-text-dark text-center faq-questions">
-                        <summary><strong>How often do I receive a crate?</strong></summary>
+                    <details class="text-center faq-questions">
+                        <summary class="content-text-dark"><strong>How often do I receive a crate?</strong></summary>
                         <p>A new crate will be sent every month.</p>
                     </details>
-                    <details class="context-text-dark text-center faq-questions">
+                    <details class="text-center faq-questions">
                         <summary><strong>How will I know when I receive my beer?</strong></summary>
                         <p>We will email you in advance of every delivery to let you know you're beer is ready to 
                             sent and what it contains.
                         </p>
                     </details>
-                    <details class="context-text-dark text-center faq-questions">
+                    <details class="text-center faq-questions">
                         <summary><strong>Can I change the date my beer is delivered?</strong></summary>
                         <p>Yes. You can contact us anytime to change the date of delivery, prior to the cut-off date stated in the advance email. </p>
                     </details>
-                    <details class="context-text-dark text-center faq-questions">
+                    <details class="text-center faq-questions">
                         <summary><strong>Can I change the crate size?</strong></summary>
                         <p>Yes. You can contact us anytime to change the amount of beers you receive, prior to the cut-off date stated in the advance email. </p>
                     </details>
-                    <details class="context-text-dark text-center faq-questions">
+                    <details class="text-center faq-questions">
                         <summary><strong>How much does delivery cost?</strong></summary>
                         <p>Nothing. Delivery is included in the cost of your subscription</p>
                     </details>
-                    <details class="context-text-dark text-center faq-questions">
+                    <details class="text-center faq-questions">
                         <summary><strong>Are there any hidden fees or cancellation costs?</strong></summary>
                         <p>No. There are no hidden fees, and no additional costs to pause or cancel your subscription</p>
                     </details>
-                    <details class="context-text-dark text-center faq-questions">
+                    <details class="text-center faq-questions">
                         <summary><strong>How do I cancel or pause my subscription?</strong></summary>
                         <p>Simply fill out the form letting us know how long you wish your subscription to be paused for, or if you wish to cancel. Alternatively give us a call. We will send email confirmation of any changes made to your subscription.</p>
                     </details>
