--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                     <div class="card mx-auto text-center" style="width: 18rem;">
                         <img src="https://images.unsplash.com/photo-1577670772839-befb49f0bee5?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=751&q=80" class="card-img-top" alt="stacked crates">
                         <div class="card-body">
-                            <h5 class="headings-light">Customize Your Crate</h5>
+                            <h5 class="headings-light">Customise Your Crate</h5>
                             <p class="content-text-light">Select your preferences</p>
                             <a href="crates.html" class="btn btn-sm card-button headings-dark">View Crates</a>
                         </div>
