further information icon added to trigger modal

--- a/beers.html
+++ b/beers.html
@@ -201,7 +201,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-2 beer-image-container">
-                    <img src="https://provenderbrown.co.uk/minisync/images/114378.jpg" alt="Saazi Ness Lager" class="beer-image">
+                    <img src="https://provenderbrown.co.uk/minisync/images/114378.JPG" alt="Saazi Ness Lager" class="beer-image">
                     <div class="overlay">
                         <h5 class="headings-light">Saazi Ness Lager</h5>
                         <p class="content-text-light"><small>A crisp, clean lager with Saaz hops & pilsner hops combining beautifully with clear Highland Water. Clear golden in colour, with hints of corn and lemon zest on the nose.</small></p>
