--- a/crates.html
+++ b/crates.html
@@ -103,11 +103,11 @@
                     <h2 class="headings-dark headings">Choose Your Crate!</h2>
                     <p class="content-text-dark">Whether you love to get your hands on new releases, or enjoy getting fresh beer every month, Tartan Taps has got your back.</p>
                     <p class="content-text-dark">Don't know what beer to try next? Let us handle it.</p>
-                    <p class="content-text-dark" data-toggle="modal" data-target="#addInfoModal"><small>Click here for further information</small></p>           
+                    <p class="content-text-dark"><small>Click the icon for further information.  </small><a data-toggle="modal" data-target="#addInfoModal"><i class="fas fa-info-circle" aria-hidden="true"></i></a></p>           
                 </div>
             </div>
 
-            <!-- Customize your crates cards -->
+            <!-- Customise your crates cards -->
             <div class="row">
                 <div class="col-12 col-sm-12 col-md-6 features">
                     <div class="card mx-auto text-center" style="width:18rem;">
@@ -130,7 +130,7 @@
             </div>
         </div>
 
-        <!-- Customize your crate form -->
+        <!-- Customise your crate form -->
         <div class="container">
             <form>
                 <div class="row">
