--- a/contact-us.html
+++ b/contact-us.html
@@ -145,7 +145,7 @@
                     </details>
                     <details class="text-center faq-questions">
                         <summary><strong>How do I cancel or pause my subscription?</strong></summary>
-                        <p>Simply fill out the form letting us know how long you wish your subscription to be paused for, or if you wish to cancel. Alternatively give us a call. We will send email confirmation of any changes made to your subscription.</p>
+                        <p>Simply fill out the enquiry form letting us know how long you wish your subscription to be paused for, or if you wish to cancel. Alternatively give us a call. We will send email confirmation of any changes made to your subscription.</p>
                     </details>
                 </div>
 
